--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">NUMAD22Sp_EshwariBhide</string>
+    <string name="about_me">About Me</string>
 </resources>
