--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,11 @@
     <string name="app_name">NUMAD22Sp_EshwariBhide</string>
     <string name="about_me">About Me</string>
     <string name="clicky_clicky">Clicky Clicky</string>
+    <string name="a">A</string>
+    <string name="c">C</string>
+    <string name="d">D</string>
+    <string name="e">E</string>
+    <string name="b">B</string>
+    <string name="f">F</string>
+    <string name="pressed">Pressed: -</string>
 </resources>
