Added ListItem class and xml file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="pressedD">Pressed: D</string>
     <string name="pressedE">Pressed: E</string>
     <string name="pressedF">Pressed: F</string>
+    <string name="list_item_name" />
+    <string name="list_item_value" />
 </resources>
