fixing issues with layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="linkValue" />
     <string name="enter_link_name">Enter Link Name</string>
     <string name="enter_link_value">Enter Link Value</string>
+    <string name="finished">Finished</string>
 </resources>
